[package]
name = "chasm-rs"
description = "A simple compile-to-WebAssembly language rewritted in Rust"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/Rodrigodd/chasm-rs"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]

leb128 = "0.2"
logos = "0.12"
thiserror = "1"

[dev-dependencies]

blake3 = "1"
wasmi = "0.9"
